force-app/main/default/objects/Amenity__c/Amenity__c.object-meta.xml
<CustomObject>
    <label>Amenity</label>
    <nameField>
        <label>Amenity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amenities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>