force-app/main/default/objects/Amenity__c/fields/Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Access_Level__c</fullName>
    <label>Access Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Owner Only</fullName>
            </value>
            <value>
                <fullName>Tenant Only</fullName>
            </value>
            <value>
                <fullName>HHO Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>