force-app/main/default/objects/Amenity__c/fields/Amenity_Name__c.field-meta.xml
<CustomField>
    <fullName>Amenity_Name__c</fullName>
    <label>Amenity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>