force-app/main/default/objects/Amenity__c/fields/Amenity_Type__c.field-meta.xml
<CustomField>
    <fullName>Amenity_Type__c</fullName>
    <label>Amenity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>