force-app/main/default/objects/Amenity__c/fields/Booking_Fee__c.field-meta.xml
<CustomField>
    <fullName>Booking_Fee__c</fullName>
    <label>Booking Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>