force-app/main/default/objects/Amenity__c/fields/Duration_Options__c.field-meta.xml
<CustomField>
    <fullName>Duration_Options__c</fullName>
    <label>Duration Options</label>
    <length>50</length>
    <type>Text</type>
</CustomField>