force-app/main/default/objects/Amenity__c/fields/Is_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approval Required</label>
    <type>Checkbox</type>
</CustomField>