force-app/main/default/objects/Amenity__c/fields/Max_Bookings_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Max_Bookings_Per_Day__c</fullName>
    <label>Max Bookings Per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>