force-app/main/default/objects/Amenity__c/fields/Time_Slots__c.field-meta.xml
<CustomField>
    <fullName>Time_Slots__c</fullName>
    <label>Time Slots</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>